[tool.poetry]
name = "HD Wallet Generator"
version = "0.1.0"
description = ""
authors = ["Jemshit Iskenderov <jemshit@mail.com>"]

[tool.poetry.dependencies]
# https://github.com/python-poetry/poetry/issues/1413
python = "~3.10"
# only used to double-check the result
coincurve = "^18.0.0"
eth-hash = "^0.5.1"
# eth-hash uses pycryptodome
pycryptodome = "^3.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
